# Orisha

./: .gitignore  Cargo.toml  build.rs
character/: characte2.glb  characterbase.glb
examples/: inspect_glb.rs
shaders/: basic.frag  basic.vert  imgui.frag  imgui.vert  sky.frag  sky.vert
shaders/compiled/: basic_frag.spv  basic_vert.spv  imgui_frag.spv  imgui_vert.spv  sky_frag.spv  sky_vert.spv
src/: main.rs
src/components/: camera.rs  interact.rs  mod.rs
src/game/: animation.rs  chunk_manager.rs  mod.rs  model_loader.rs  physics.rs  player.rs  sky.rs  time.rs  world_generation.rs
src/gpu/: allocator.rs  buffer.rs  commands.rs  descriptor.rs  device.rs  mod.rs  pipeline.rs  pipeline_imgui.rs  pipeline_sky.rs  renderer.rs  swapchain.rs  sync.rs  texture.rs  utils.rs
