[package]
name = "orisha"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = { version = "0.38.0", features = ["debug", "default", "linked", "loaded", "std"] }
ash-window = "0.13.0"
bytemuck = { version = "1", features = ["derive"] }
glam = "0.32.1"
gpu-allocator = { version = "0.28.0", features = ["vulkan"] }
winit = { version = "0.30.13", features = ["x11"] }
